--- a/portal-web/docroot/html/taglib/aui/input/init-ext.jspf
+++ b/portal-web/docroot/html/taglib/aui/input/init-ext.jspf
@@ -21,7 +21,6 @@ if (!useNamespace) {
 
 String baseType = GetterUtil.getString((String)request.getAttribute("aui:input:baseType"));
 String forLabel = namespace + GetterUtil.getString((String)request.getAttribute("aui:input:forLabel"));
-boolean wrappedField = GetterUtil.getBoolean(String.valueOf(request.getAttribute("aui:input:wrappedField")));
 
 if (Validator.isNull(label) && changesContext) {
 	StringBundler sb = new StringBundler(5);
@@ -66,5 +65,20 @@ if (helpTextCssClass.equals("add-on")) {
 String controlGroupCssClass = AUIUtil.buildControlGroupCss(inlineField, inlineLabel, wrapperCssClass, baseType);
 String baseTypeCssClass = TextFormatter.format(StringUtil.toLowerCase(baseType), TextFormatter.K);
 String fieldCssClass = AUIUtil.buildCss(AUIUtil.FIELD_PREFIX, disabled, first, last, cssClass);
-String labelTag = AUIUtil.buildLabel(baseTypeCssClass, inlineField, showForLabel, forLabel);
+
+String labelCssClass = baseTypeCssClass;
+
+String inputWrapperClass = controlGroupCssClass;
+
+if (radioField) {
+	labelCssClass = "";
+
+	inputWrapperClass = baseTypeCssClass;
+}
+
+if (inputWrapperClass.equals("boolean")) {
+	inputWrapperClass = "checkbox";
+}
+
+String labelTag = AUIUtil.buildLabel(labelCssClass, inlineField, showForLabel, forLabel);
 %>
