--- a/portal-web/docroot/html/themes/_styled/css/dockbar.css
+++ b/portal-web/docroot/html/themes/_styled/css/dockbar.css
@@ -551,6 +551,10 @@ $editLayoutPanelWidth: 460px;
 				}
 			}
 		}
+
+		.lfr-page-layouts {
+			margin-left: 0;
+		}
 	}
 
 	.lfr-has-add-content {
