LRQA-12004 Change to string values

--- a/modules/util/ui-taglibs-sample/src/main/resources/META-INF/resources/input.jspf
+++ b/modules/util/ui-taglibs-sample/src/main/resources/META-INF/resources/input.jspf
@@ -130,11 +130,11 @@
 	<liferay-ui:input-move-boxes
 		leftBoxName="Left Box Name"
 		leftList="<%= list %>"
-		leftReorder="<%= true %>"
+		leftReorder="true"
 		leftTitle="Left Title"
 		rightBoxName="Right Box Name"
 		rightList="<%= list %>"
-		rightReorder="<%= true %>"
+		rightReorder="true"
 		rightTitle="Right Title"
 	/>
 
