--- a/modules/apps/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/edit_message_quick.jspf
+++ b/modules/apps/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/edit_message_quick.jspf
@@ -86,7 +86,7 @@ boolean splitThread = ParamUtil.getBoolean(request, "splitThread");
 		</c:if>
 
 		<liferay-ui:custom-attributes-available className="<%= MBMessage.class.getName() %>">
-			<liferay-ui:custom-attribute-list
+			<liferay-frontend:custom-attribute-list
 				className="<%= MBMessage.class.getName() %>"
 				classPK="<%= (message != null) ? message.getMessageId() : 0 %>"
 				editable="<%= true %>"
