--- a/portal-web/docroot/html/css/portal/add_content.css
+++ b/portal-web/docroot/html/css/portal/add_content.css
@@ -158,7 +158,7 @@
 				}
 
 				.radio {
-					padding-left: 25px;
+					margin-left: 25px;
 				}
 
 				&.toggler-header-collapsed .lfr-page-template-description {
@@ -330,12 +330,9 @@
 
 			.toggler-header {
 				&.active {
-					&.lfr-page-template-title .radio {
+					&.lfr-page-template-title label {
 						background-color: #0DB5E7;
-
-						label {
-							color: #FFF;
-						}
+						color: #FFF;
 					}
 				}
 			}
