--- a/alecs-theme/src/css/_custom.scss
+++ b/alecs-theme/src/css/_custom.scss
@@ -28,6 +28,8 @@ body {
  	display: block;
  	position: relative;
  	padding-bottom: 125px;
+	max-width: 90%;
+	margin: auto;
 }
 
 .portlet-layout {
