--- a/alecs-theme/src/css/_custom.scss
+++ b/alecs-theme/src/css/_custom.scss
@@ -30,6 +30,11 @@ body {
  	padding-bottom: 125px;
 	max-width: 90%;
 	margin: auto;
+	border-radius: 15px;
+	background-color: #f0f0f0;
+	margin-top: 15px;
+	-webkit-box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
 .portlet-layout {
