Header and Footer Improvements
Changed header color, page background color, removed border radius' from header/footer, placed login in footer

--- a/alecs-theme/src/css/partials/_navbar_alec.scss
+++ b/alecs-theme/src/css/partials/_navbar_alec.scss
@@ -1,5 +1,5 @@
 .navbar-inverse.navbar-alec {
-	background: linear-gradient(to bottom right, #358cf4, #0b63ce);
+	background: linear-gradient(to bottom right, #60a0ff, #1f7aff);
 	border-width: 0;
 	margin-bottom: 0;
 
