--- a/alecs-theme/src/css/partials/_footer.scss
+++ b/alecs-theme/src/css/partials/_footer.scss
@@ -3,20 +3,23 @@
 	color: $brand-color-3;
 	min-height: 125px;
 	padding-bottom: 0;
-	border-top-left-radius: 20px;
 	width: 100%;
-	bottom: 0;
-	position: absolute;
+	bottom: -125px;
+	position: relative;
 
 	a {
 		color: $brand-color-3;
-		font-size: 12px;
+		font-size: 15px;
 
 		&:hover, &:focus, &.active, &.open {
 			color: $secondary-header-color;
 			text-decoration: none;
 		}
 	}
+
+	.navbar-user {
+ 	 padding: 10px;
+  }
 
  .outro {
 	 text-align: center;
@@ -25,12 +28,12 @@
 		 font-size: 14px;
 		 text-decoration-line: underline;
 	 }
- }
 
- hr {
- 	background: white;
- 	width: 65%;
- 	border-top: 1px solid;
+	 hr {
+   	background: white;
+   	width: 65%;
+   	border-top: 1px solid;
+   }
  }
 
 }
