--- a/alecs-theme/src/css/partials/variables/_colors.scss
+++ b/alecs-theme/src/css/partials/variables/_colors.scss
@@ -1,6 +1,6 @@
-$main-bg-color: #FFF;
+$main-bg-color: #f3f3f3;
 
-$main-black-color: #1F1F1F;
+$main-black-color: #2b2b2b;
 
 $main-header-color: #FFF;
 $secondary-header-color: #e5e5e5;
