--- a/alecs-theme/src/css/_custom.scss
+++ b/alecs-theme/src/css/_custom.scss
@@ -15,12 +15,12 @@
 body {
 	background-color: $main-bg-color;
 	position: relative;
-}
+	top: 64px;
 
-#wrapper {
-	padding: 0;
+	@media (max-width: 576px){
+		top: 57px;
+	}
 
-	@import "partials/user_icon";
 }
 
 #content {
@@ -29,10 +29,38 @@ body {
 	max-width: 90%;
 	margin: auto;
 	border-radius: 15px;
-	background-color: #fcfcfc;
+	background-color: #FCFCFC;
 	margin-top: 15px;
 	-webkit-box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+}
+
+#wrapper {
+	padding: 0;
+
+	@import "partials/user_icon";
+}
+
+.alecs-jumbotron {
+	background: $main-black-color;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	margin-bottom: -100px;
+	padding-bottom: 7rem !important;
+
+	h1 {
+		color: #FFF;
+		font-size: 50px;
+		text-align: center;
+	}
+
+	@media (min-width: 576px){
+		padding: 3rem 2rem;
+	}
+}
+
+.navbar .container-fluid {
+	display: inline-block !important;
 }
 
 .portlet-layout {
@@ -49,6 +77,10 @@ body {
 	color: $main-black-color;
 }
 
-.navbar .container-fluid {
-	display: inline-block !important;
+.buffer {
+	top: 56px !important;
+
+	@media (max-width: 576px){
+		top: 49px !important;
+	}
 }
