--- a/alecs-theme/src/css/partials/variables/_colors.scss
+++ b/alecs-theme/src/css/partials/variables/_colors.scss
@@ -1,9 +1,9 @@
-$main-bg-color: #f3f3f3;
+$main-bg-color: #F3F3F3;
 
-$main-black-color: #2b2b2b;
+$main-black-color: #2B2B2B;
 
 $main-header-color: #FFF;
-$secondary-header-color: #e5e5e5;
+$secondary-header-color: #E5E5E5;
 
 $brand-bg-color-1: #6A00D6;
 $brand-color-1: $brand-bg-color-1;
