--- a/alecs-theme/src/css/partials/_footer.scss
+++ b/alecs-theme/src/css/partials/_footer.scss
@@ -25,32 +25,31 @@
 		}
 	}
 
- 	.navbar-user {
- 		padding: 10px;
-  }
+	.navbar-user {
+		padding: 10px;
+	}
 
- 	.outro {
+	.outro {
 		text-align: center;
 
 		a {
 			font-size: 14px;
 			text-decoration-line: underline;
-	 	}
+		}
 
-	 	hr {
-   		background: white;
-   		width: 65%;
-   		border-top: 1px solid;
-   	}
+		hr {
+			background: #FFF;
+			border-top: 1px solid;
+			width: 65%;
+		}
 
-	 	p {
-		 	margin-bottom: 0 !important;
-		 	padding-bottom: 1rem;
-	 	}
- 	}
+		p {
+			margin-bottom: 0 !important;
+			padding-bottom: 1rem;
+		}
+	}
 
 	.user-icon {
 		display: inline-grid;
 	}
-
 }
