--- a/alecs-theme/src/css/partials/_modules.scss
+++ b/alecs-theme/src/css/partials/_modules.scss
@@ -60,8 +60,8 @@
 	}
 
 	.asset-user-name {
-		border-bottom: 1px solid $brand-color-1;
-		color: $brand-color-1;
+		border-bottom: 1px solid $brand-purple;
+		color: $brand-purple;
 		display: inline-block;
 		font-size: 12px;
 		line-height: 32px;
