--- a/alecs-theme/src/css/partials/variables/_colors.scss
+++ b/alecs-theme/src/css/partials/variables/_colors.scss
@@ -5,11 +5,8 @@ $main-black-color: #2B2B2B;
 $main-header-color: #FFF;
 $secondary-header-color: #E5E5E5;
 
-$brand-bg-color-1: #6A00D6;
-$brand-color-1: $brand-bg-color-1;
+$brand-purple: #6A00D6;
 
-$brand-bg-color-2: #F5F5F5;
-$brand-color-2: $brand-bg-color-1;
+$brand-grey: #F5F5F5;
 
-$brand-bg-color-3: #FFF;
-$brand-color-3: $brand-bg-color-3;
+$brand-white: #FFF;
