--- a/alecs-theme/src/css/_custom.scss
+++ b/alecs-theme/src/css/_custom.scss
@@ -3,6 +3,7 @@
 @import "partials/header";
 @import "partials/layout";
 @import "partials/modules";
+@import "partials/user_icon";
 
 @import "partials/aspect_ratio";
 @import "partials/navbar_alec";
@@ -25,8 +26,8 @@ body {
 #content {
 	background-color: #FCFCFC;
 	border-radius: 15px;
-	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 	-webkit-box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 	display: block;
 	margin: auto;
 	margin-top: 15px;
@@ -36,8 +37,6 @@ body {
 
 #wrapper {
 	padding: 0;
-
-	@import "partials/user_icon";
 }
 
 .alecs-jumbotron {
@@ -45,7 +44,7 @@ body {
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
 	margin-bottom: -100px;
-	padding-bottom: 7rem !important;
+	padding-bottom: 7rem;
 
 	h1 {
 		color: #FFF;
@@ -54,7 +53,7 @@ body {
 	}
 
 	@media (min-width: 576px) {
-		padding: 3rem 2rem;
+		padding: 3rem 2rem 7rem;
 	}
 }
 
