--- a/alecs-theme/src/css/_portlet_decorator.scss
+++ b/alecs-theme/src/css/_portlet_decorator.scss
@@ -1,6 +1,6 @@
 .portlet-decorate .portlet-content {
 	background: transparent;
-	border: none;
+	border: 0;
 }
 
 .portlet-barebone .portlet-content {
@@ -8,7 +8,7 @@
 }
 
 .portlet-trending .portlet-content {
-	background-color: $brand-bg-color-2;
+	background-color: $brand-grey;
 	font-size: 12px;
 	margin-top: 40px;
 	padding: 50px 20px 20px;
@@ -35,8 +35,8 @@
 	}
 
 	.table-bordered > tbody > tr > td {
-		background-color: $brand-bg-color-2;
-		border-color: $brand-bg-color-2;
+		background-color: $brand-grey;
+		border-color: $brand-grey;
 	}
 
 	.user-name {
