--- a/alecs-theme/src/css/partials/_buttons.scss
+++ b/alecs-theme/src/css/partials/_buttons.scss
@@ -4,17 +4,17 @@
 .btn-theme-default {
 	border-radius: 0;
 	border-width: 0;
-	color: $brand-color-1;
-	font-family: 'open_sanssemibold';
+	color: $brand-purple;
+	font-family: 'open_sanssemibold', sans-serif;
 	font-size: 12px;
 	min-width: 262px;
 	outline-width: 0;
 	padding: 13px 20px;
 
 	&:hover, &:focus, &:active {
-		background-color: rgba($brand-bg-color-3, 0.2);
+		background-color: rgba($brand-white, 0.2);
 		border-width: 0;
-		color: $brand-color-3;
+		color: $brand-white;
 		text-decoration: none;
 	}
 }
