--- a/alecs-theme/src/css/partials/_navbar_alec.scss
+++ b/alecs-theme/src/css/partials/_navbar_alec.scss
@@ -3,7 +3,7 @@
 	border-width: 0;
 	box-shadow: 0 5px 24px 2px rgba(0, 0, 0, 0.14);
 	margin-bottom: 0;
-	z-index: 900;
+	z-index: 990;
 
 	.has-control-menu .fixed-top {
 		margin-top: 105px;
@@ -41,4 +41,8 @@
 			margin: 0;
 		}
 	}
+}
+
+.lfr-product-menu-panel.sidenav-menu-slider {
+    z-index: 991;
 }
