--- a/alecs-theme/src/css/partials/_navbar_alec.scss
+++ b/alecs-theme/src/css/partials/_navbar_alec.scss
@@ -3,7 +3,7 @@
 	border-width: 0;
 	box-shadow: 0 5px 24px 2px rgba(0, 0, 0, 0.14);
 	margin-bottom: 0;
-	z-index: 990;
+	z-index: 987;
 
 	.has-control-menu .fixed-top {
 		margin-top: 105px;
@@ -45,4 +45,28 @@
 
 .lfr-product-menu-panel.sidenav-menu-slider {
     z-index: 991;
+}
+
+.fixed {
+	top: 63px;
+
+	@media (max-width: 576px) {
+		top: 55px;
+	}
+
+	.buffer {
+		top: 55px !important;
+
+		@media (max-width: 576px) {
+			top: 49px !important;
+		}
+	}
+
+	.navbar-alec {
+		left: 0;
+		position: fixed;
+		right: 0;
+		top: 0;
+		z-index: 990;
+	}
 }
